Edit hobbies.html page

--- a/styles.css
+++ b/styles.css
@@ -76,6 +76,21 @@ header .profile-image {
 header .profile-image:hover {
   transform: scale(1.2) rotate(360deg);
 }
+.hobbiesh2 {
+  text-align: center;
+}
+
+.hobbies {
+  margin-top: 50px;
+  width: 150px;
+  height: 150px;
+  border-radius: 50%;
+  border: 3px solid white;
+  transition: all .5s;
+}
+.hobbies:hover {
+  transform: scale(3) rotate(360deg);
+}
 .tag {
   background-color: #efefef;
   color: black;
